+fix comments in proto
