# pkg/api/common/ip-transport.pb.go
@@ -21,7 +21,7 @@ const (
 	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
 )
 
-//IP net transport
+//Transport: represents net transport (L4)
 type Networks_NetIP_Transport int32
 
 const (
@@ -68,7 +68,7 @@ func (Networks_NetIP_Transport) EnumDescriptor() ([]byte, []int) {
 	return file_common_ip_transport_proto_rawDescGZIP(), []int{0, 0, 0}
 }
 
-//Networks
+//Networks: represents network types
 type Networks struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
@@ -107,13 +107,13 @@ func (*Networks) Descriptor() ([]byte, []int) {
 	return file_common_ip_transport_proto_rawDescGZIP(), []int{0}
 }
 
-//IP network
+//NetIP: represents IP-Network type (L3)
 type Networks_NetIP struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	//IP net address range
+	//CIDR: IP range
 	CIDR string `protobuf:"bytes,1,opt,name=CIDR,proto3" json:"CIDR,omitempty"`
 }
 
@@ -156,14 +156,16 @@ func (x *Networks_NetIP) GetCIDR() string {
 	return ""
 }
 
-//IP net port range
+//PortRange: port [from - to] range
 type Networks_NetIP_PortRange struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
+	//port from
 	From uint32 `protobuf:"varint,1,opt,name=from,proto3" json:"from,omitempty"`
-	To   uint32 `protobuf:"varint,2,opt,name=to,proto3" json:"to,omitempty"`
+	//port to
+	To uint32 `protobuf:"varint,2,opt,name=to,proto3" json:"to,omitempty"`
 }
 
 func (x *Networks_NetIP_PortRange) Reset() {
